--- a/services/notes/serverless.yml
+++ b/services/notes/serverless.yml
@@ -49,7 +49,7 @@ provider:
       # Restrict our IAM role permissions to
       # the specific table for the stage
       Resource:
-        - !ImportValue '${self:custom.sstApp}-UserPoolId'
+        - !ImportValue '${self:custom.sstApp}-UserPoolArn'
 # Create our resources with separate CloudFormation templates
 # Create our resources with separate CloudFormation templates
 
