fix http method type of listusers and listnotesforuser endpoints

--- a/services/notes/serverless.yml
+++ b/services/notes/serverless.yml
@@ -135,7 +135,7 @@ functions:
     events:
       - http:
           path: listusers
-          method: post
+          method: get
           cors: true
           authorizer: aws_iam
 
@@ -147,7 +147,7 @@ functions:
     events:
       - http:
           path: listnotesforuser/{userPoolUserId}
-          method: post
+          method: get
           cors: true
           authorizer: aws_iam
 
