--- a/services/notes/serverless.yml
+++ b/services/notes/serverless.yml
@@ -27,6 +27,7 @@ provider:
   environment:
     stripeSecretKey: ${env:STRIPE_SECRET_KEY}
     tableName: !ImportValue '${self:custom.sstApp}-TableName'
+    indexName: !ImportValue '${self:custom.sstApp}-IndexName'
     userPoolId: !ImportValue '${self:custom.sstApp}-UserPoolId'
 
   iamRoleStatements:
@@ -43,6 +44,13 @@ provider:
       # the specific table for the stage
       Resource:
         - !ImportValue '${self:custom.sstApp}-TableArn'
+    - Effect: Allow
+      Action:
+        - dynamodb:Query
+      # Restrict our IAM role permissions to
+      # the specific table for the stage
+      Resource:
+        - !ImportValue '${self:custom.sstApp}-IndexArn'
     - Effect: Allow
       Action:
         - cognito-idp:ListUsers
