--- a/services/notes/resources/cognito-policy.yml
+++ b/services/notes/resources/cognito-policy.yml
@@ -13,3 +13,4 @@ Resources:
               !Sub 'arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${ApiGatewayRestApi}/*'
       Roles:
         - !ImportValue '${self:custom.sstApp}-CognitoAuthRole'
+        - !ImportValue '${self:custom.sstApp}-CognitoAdminAuthRole'
