--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -15,6 +15,7 @@
     "@aws-cdk/aws-cognito": "1.61.0",
     "@aws-cdk/aws-dynamodb": "1.61.0",
     "@aws-cdk/aws-iam": "1.61.0",
+    "@aws-cdk/aws-lambda": "1.61.0",
     "@aws-cdk/aws-s3": "1.61.0",
     "@aws-cdk/core": "1.61.0",
     "@serverless-stack/cli": "0.4.3",
